--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "animate.css": "^4.1.1",
-    "animejs": "^3.2.1"
+    "animejs": "^3.2.1",
+    "moment": "^2.29.4"
   }
 }
