--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@ant-design-vue/nuxt": "^1.2.0",
     "@nuxt/content": "^2.8.2",
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@types/animejs": "^3.1.7",
     "nuxt": "^3.7.3",
+    "prettier": "3.1.1",
     "sass": "^1.68.0"
   },
   "dependencies": {
