daily: 先po一版上去

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "animate.css": "^4.1.1",
     "animejs": "^3.2.1",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "words-count": "^2.0.2"
   }
 }
